# Stocks_in_rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile  PROJECT_STATUS.md  README.md  demo.sh  docker-compose.yml
.trae/documents/: technical_architecture.md
src/: main.rs
src/analysis/: mod.rs
src/analysis/indicators/: mod.rs
src/analysis/patterns/: mod.rs
src/analysis/signals/: mod.rs
src/api/: mod.rs
src/config/: settings.rs
src/data/: mod.rs
src/data/preprocessing/: mod.rs
src/data/providers/: mod.rs
src/data/storage/: mod.rs
src/education/: mod.rs
src/ml/: mod.rs
src/ml/models/: mod.rs
src/portfolio/: mod.rs
src/utils/helpers/: mod.rs
tests/: api_tests.rs  ml_tests.rs  technical_analysis_tests.rs
web/: index.html
web/css/: style.css
web/js/: app.js
