[package]
name = "stock_analyst"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
diesel = { version = "2.1", features = ["postgres", "chrono"] }
dotenv = "0.15"

# Machine learning
smartcore = "0.3"
linfa = "0.7"
ndarray = "0.15"

# Data processing
polars = { version = "0.35", features = ["lazy", "temporal"] }
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# WebSocket
tokio-tungstenite = "0.21"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Math and statistics
statrs = "0.16"
rand = "0.8"

# Time series analysis
ts-rs = "0.4"

# Async utilities
async-trait = "0.1"

# Environment variables
env_logger = "0.10"

# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# URL parsing
url = "2.5"

# Regular expressions
regex = "1.10"

# CSV processing
csv = "1.3"

# DateTime utilities
chrono-tz = "0.8"

# HTTP server middleware
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Base64 encoding
base64 = "0.21"

# Cryptographic functions
sha2 = "0.10"

# Lazy static
lazy_static = "1.4"

# Redis client
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
criterion = "0.5"
mockito = "1.2"

[[bin]]
name = "stock_analyst"
path = "src/main.rs"